# robotics_NSU

ex01/: commands.txt
module02/ex01/: .bashrc
module02/ex02/: package_path_ros2topic.txt
module02/ex03/dancingcerberus/: CMakeLists.txt  package.xml
module02/ex04/: colcon_build.txt
module02/ex04/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
module02/ex04/log/: latest_build
module02/ex05/: rosnode_info.txt  rosnode_list.txt
module02/ex06/: cmd_vel.txt
module02/ex08/: rqt_console.csv
module02/ex09/full_name/: CMakeLists.txt  package.xml
module02/ex10/text_to_cmd_vel/: package.xml  setup.py
module03/ex01/full_name/: package.xml  setup.py
module03/ex01/full_name_interfaces/: CMakeLists.txt  package.xml
module03/ex02/action_turtle_commands/: package.xml  setup.py
module03/ex02/action_turtle_commands_interfaces/: CMakeLists.txt  package.xml
module03/ex03/: pose_speed_x1.yaml  turtle_cmd_vel.mcap
module03/ex05/move_to_goal/: package.xml  setup.py
module04/ex01/: last_transform.txt  transform.txt
module04/ex02/turtle_tf2_carrot/: package.xml  setup.py
module04/ex03/time_travel_tf2/: package.xml  setup.cfg  setup.py
module05/ex01/: robot.urdf
module05/ex02/: robot.urdf.xacro
module05/ex03/: README.md
module06/ex01/robot_lidar/: package.xml  setup.py
module06/ex02/robot_depth/: package.xml  setup.py
module06/ex03/robot_imu/: package.xml  setup.py
module06/ex04/lidar_navigate/: package.xml  setup.cfg  setup.py
module06/ex05/depth_navigate/: package.xml  setup.cfg  setup.py
(+48 files in other folders)
