<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>move_to_goal</name>
  <version>0.0.0</version>
  <description>Turtlesim move to goal coordinates node</description>
  <maintainer email="edikchermenin@gmail.com">cerberus</maintainer>
  <license>Apache License 2.0</license>
  
  <depend>rclpy</depend>
  <depend>example_interfaces</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
